--- a/problem2/src/App.css
+++ b/problem2/src/App.css
@@ -4,5 +4,6 @@
   align-items: center;
   justify-content: center;
   min-width: 360px;
+  min-height: 100vh;
   font-family: Arial, Helvetica, sans-serif;
 }
