--- a/problem2/src/App.css
+++ b/problem2/src/App.css
@@ -3,7 +3,16 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
+  width: 100%;
   min-width: 360px;
   min-height: 100vh;
   font-family: Arial, Helvetica, sans-serif;
+  color: #181818;
+  background: linear-gradient(180deg, #e9e9e9, #131313);
+}
+
+.shadow {
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+    rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 }
