--- a/problem2/src/App.css
+++ b/problem2/src/App.css
@@ -7,8 +7,8 @@
   min-width: 360px;
   min-height: 100vh;
   font-family: Arial, Helvetica, sans-serif;
-  color: #181818;
-  background: linear-gradient(180deg, #e9e9e9, #131313);
+  color: #fff;
+  background: linear-gradient(to top, #fff, #3565f3, #131313);
 }
 
 .shadow {
