--- a/problem2/src/components/Card/styles.css
+++ b/problem2/src/components/Card/styles.css
@@ -1,18 +1,16 @@
 .card {
-  background: #fff;
-  border: 2px solid #e9e9e9;
-  border-radius: 10px;
+  background: rgba(255, 255, 255, 0.3);
+  border-radius: 20px;
 
   .card-title {
     font-size: 18px;
     font-weight: 700;
-    border-bottom: 2px solid #e9e9e9;
-    padding: 12px;
+    padding: 16px;
   }
 
   .card-content {
     display: flex;
     flex-direction: column;
-    padding: 12px;
+    padding: 0 16px 16px;
   }
 }
