--- a/problem2/src/components/NumberInput/styles.css
+++ b/problem2/src/components/NumberInput/styles.css
@@ -2,8 +2,9 @@
   appearance: none;
   outline: none;
   border: none;
-
   padding: 10px;
   font-size: 32px;
   font-weight: 600;
+  background: none;
+  color: #fff;
 }
