--- a/problem2/src/components/TokenSelector/styles.css
+++ b/problem2/src/components/TokenSelector/styles.css
@@ -8,18 +8,18 @@
   font-weight: 600;
   cursor: pointer;
   background: #f9f9f9;
+  color: #181818;
 
   &:hover {
-    background: #f1f1f1;
+    background: #e9e9e9;
   }
-
   &.default-selector {
     padding: 0 12px;
   }
 }
 
 .img-arrow {
-  width: 16px;
-  height: 16px;
+  width: 20px;
+  height: 20px;
   margin-left: 5px;
 }
