--- a/problem2/src/containers/SwapForm/styles.css
+++ b/problem2/src/containers/SwapForm/styles.css
@@ -32,13 +32,14 @@
     outline: none;
     border-radius: 26px;
     background: #f9f9f9;
+    color: #181818;
     font-size: 18px;
     font-weight: 600;
     cursor: pointer;
     z-index: 1;
 
     &:hover {
-      background: #f1f1f1;
+      background: #e9e9e9;
     }
   }
 }
