--- a/problem2/src/containers/TokenModal/styles.css
+++ b/problem2/src/containers/TokenModal/styles.css
@@ -18,22 +18,42 @@
   margin: auto;
   padding: 20px;
   background: #fff;
+  color: #181818;
   border: 1px solid #888;
-  border-radius: 5px;
+  border-radius: 20px;
 
   .btn-close {
     position: absolute;
+    right: 20px;
+    top: 10px;
     color: #aaa;
-    font-size: 28px;
+    font-size: 30px;
     font-weight: bold;
-    right: 15px;
-    top: 5px;
   }
 
   .btn-close:hover,
   .btn-close:focus {
-    color: black;
+    color: #181818;
     text-decoration: none;
     cursor: pointer;
+  }
+}
+
+.token-list {
+  overflow-y: scroll;
+  height: 378px;
+
+  .currency {
+    padding: 10px;
+    cursor: pointer;
+    font-size: 20px;
+    border-radius: 5px;
+    &:hover {
+      background: rgba(53, 101, 243, 0.3);
+    }
+    .token-icon {
+      width: 34px;
+      height: 34px;
+    }
   }
 }
