feat: update form input

--- a/problem2/src/App.css
+++ b/problem2/src/App.css
@@ -8,7 +8,7 @@
   min-height: 100vh;
   font-family: Arial, Helvetica, sans-serif;
   color: #fff;
-  background: linear-gradient(to top, #fff, #3565f3, #131313);
+  background: linear-gradient(to top, #fff, #3565f3, #0c1f49);
 }
 
 .shadow {
