--- a/problem2/src/containers/SwapForm/styles.css
+++ b/problem2/src/containers/SwapForm/styles.css
@@ -1,27 +1,22 @@
 .form {
-  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
 
   .card-wrapper {
-    position: relative;
-    > div {
-      &:not(:last-child) {
-        margin-bottom: 5px;
-      }
-    }
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
     .img-convert {
-      width: 36px;
-      height: 36px;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      background: #fff;
-      border-radius: 50%;
+      width: 26px;
+      height: 26px;
+      margin: 10px 0;
     }
+  }
+
+  .rate {
+    margin: 10px auto 10px 0;
   }
 
   .btn-swap {
